<resources>
    <string name="app_name">BragoProject</string>
    <string name="logo">Logo</string>
    <string name="branding_image">Branding Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_for_first_onboarding_page">Photo for first onboarding page</string>
    <string name="welcome_to_brago">Welcome to Brago!</string>
    <string name="flexing_application">Flexing application</string>
    <string name="make_posts_flex_and_challenge_others_to_decide_who_s_more_alpha">Make posts, flex and challenge others to decide who\'s more alpha</string>
    <string name="next">Next</string>
    <string name="photo_for_second_onboarding_page">Photo for second onboarding page</string>
    <string name="share_your_progress_and_improvements_with_a_supportive_community">Share your progress and improvements with a supportive community!</string>
    <string name="an_application_to_share_your_evolution_plans_and_your_progress_throughout_your_journey">An application to share your evolution plans and your progress throughout your journey.</string>
    <string name="photo_for_third_onboarding_page">Photo for third onboarding page</string>
    <string name="we_are_all_about_igniting_fierce_healthy_competition">We are all about igniting fierce, healthy competition!</string>
    <string name="we_want_to_push_everyone_on_this_platform_to_become_the_best_version_of_themselves_through_competition">We want to push everyone on this platform to become the best version of themselves through competition.</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="blue_background">Blue background</string>
    <string name="sign_in">Sign In</string>
    <string name="x_image_button_in_login_page_that_leads_back_to_previous_page">X ImageButton in login page that leads back to previous page</string>
    <string name="email">Email..</string>
    <string name="password">Password..</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="or_login_with">Or login with:</string>
    <string name="photo_for_login_page_above_the_blue_background">Photo for login page above the blue background</string>
    <string name="instagram_icon_that_logs_user_using_instagram_account">Instagram icon that logs user using instagram account</string>
    <string name="facebook_icon_that_logs_user_using_facebook_account">Facebook icon that logs user using facebook account</string>
    <string name="google_icon_that_logs_user_using_gmail_account">Google icon that logs user using gmail account</string>
    <string name="photo_for_recover_account_page">Photo for recover account page</string>
    <string name="recover_account">Recover Account</string>
    <string name="recover">Recover</string>
    <string name="full_name">Full Name..</string>
    <string name="date_of_birth">Date of Birth..</string>
    <string name="by_signing_up_you_re_accepting_our">By Signing Up You\'re Accepting Our</string>
    <string name="terms_amp_conditions"><![CDATA[Terms&Conditions]]></string>
    <string name="back">Back</string>
    <string name="pick_profile_picture_photo">Pick profile picture photo</string>
    <string name="intro">Intro</string>
    <string name="basic_information">Basic \nInformation</string>
    <string name="select_categories">Select \nCategories</string>
    <string name="flex_categories">Flex Categories</string>
    <string name="items">Items</string>
    <string name="search_here">Search here..</string>
    <string name="dropdown_image_button">Dropdown ImageButton</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="category_title">Category Title</string>
    <string name="posts">posts</string>
    <string name="like_image">Like image</string>
    <string name="search_image_button">Search ImageButton</string>
    <string name="explore_fragment">Explore Fragment</string>
    <string name="makepost_fragment">MakePost Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="back_to_home">Back to home</string>
    <string name="profile_options">Profile options</string>
    <string name="here_you_could_write_your_account_bio_and_give_an_idea_of_what_you_flex_on_your_account">Here you could write your account bio and give an idea of what you flex on your account.</string>
    <string name="location">Location</string>
    <string name="flexes">Flexes</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel_edit_profile">Cancel edit profile</string>
    <string name="submit_edit_profile">Submit edit profile</string>
    <string name="username">Username..</string>
    <string name="bio">Bio..</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow</string>
    <string name="full_name_user">Full Name</string>
    <string name="username_user">Username</string>
    <string name="horizontal_break">|</string>
</resources>