<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <ImageView
        android:id="@+id/FirstSetupPageImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:src="@drawable/firstsetuppage"
        android:contentDescription="@string/photo_for_first_onboarding_page" />

    <TextView
        android:id="@+id/WelcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_brago"
        android:textSize="28sp"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/FlexTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flexing_application"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/DescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_posts_flex_and_challenge_others_to_decide_who_s_more_alpha"
        android:textSize="16sp"
        android:layout_marginHorizontal="40dp"
        android:gravity="center"
        android:layout_marginBottom="80dp"/>

    <Button
        android:id="@+id/FirstNextBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        style="@style/FirstButtonStyle"/>

</LinearLayout>
