<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:src="@color/pool_blue"
        android:contentDescription="@string/blue_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/round_edges_page"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="6dp"
            android:gravity="start"
            android:text="@string/flex_categories"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FlexItemsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/items"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/search_here"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/ic_search"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:background="@drawable/search_bar_layout"
            android:importantForAutofill="no"
            android:inputType="text" />

        <GridView
            android:id="@+id/CategoriesGrid"
            android:layout_width="match_parent"
            android:layout_height="544dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:horizontalSpacing="16dp"
            android:numColumns="2"
            android:padding="40dp"
            android:verticalSpacing="16dp" />

        <Button
            android:id="@+id/NextBTN"
            style="@style/FirstButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/next" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:backgroundTint="@color/pool_blue"
        android:contentDescription="@string/back"
        android:onClick="onFloatingActionButtonClick"/>


    <SeekBar
        android:id="@+id/StepIndicator"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:max="50"
        android:progress="50"
        android:thumbTint="#BAE8E8"
        android:progressTint="@color/black"
        android:progressBackgroundTint="@color/black"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_marginTop="64dp"
        android:layout_marginStart="88dp"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_information"
        android:layout_marginTop="58dp"
        android:layout_marginStart="168dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_categories"
        android:layout_marginTop="58dp"
        android:layout_marginStart="270dp"
        android:textColor="#BAE8E8"
        android:textSize="15sp"
        android:textAlignment="center"/>

</RelativeLayout>