<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <ImageView
        android:id="@+id/SecondSetupPageImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:src="@drawable/secondsetuppage"
        android:contentDescription="@string/photo_for_second_onboarding_page" />

    <TextView
        android:id="@+id/ShareTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_your_progress_and_improvements_with_a_supportive_community"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/DescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_application_to_share_your_evolution_plans_and_your_progress_throughout_your_journey"
        android:textSize="16sp"
        android:layout_marginBottom="88dp"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/SecondNextBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        style="@style/FirstButtonStyle"/>

</LinearLayout>
