<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPassword" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@color/pool_blue"
        android:contentDescription="@string/blue_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/secondsetuppage"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/photo_for_recover_account_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="230dp"
        android:background="@drawable/round_edges_page" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_account"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:textSize="24sp"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/X_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xbutton"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onBackButtonClick"
                android:layout_marginTop="40dp"
                android:layout_marginStart="144dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/x_image_button_in_login_page_that_leads_back_to_previous_page" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailTIL"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/EditTextStyle"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="32dp"
            android:padding="8dp">

            <EditText
                android:id="@+id/EmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@null"
                android:autofillHints="EmailAddress"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RecoverBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            style="@style/FirstButtonStyle"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</RelativeLayout>